--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -105,37 +105,47 @@
                     </NavLink>
                     @if (stateReportes)
                     {
-                <ul class="children">
-                    <li class="list-unstyled">
-                        <NavLink class="nav-link" href="">
-                            <span class="icon-show_chart" aria-hidden="true"></span> Categorias
-                        </NavLink>
-                    </li>
+                        <ul class="children">
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="">
+                                    <span class="icon-show_chart" aria-hidden="true"></span> Categorias
+                                </NavLink>
+                            </li>
 
-                    <li class="list-unstyled">
-                        <NavLink class="nav-link" href="Reportes/Productos">
-                            <span class="icon-show_chart" aria-hidden="true"></span> Productos
-                        </NavLink>
-                    </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Reportes/Productos">
+                                    <span class="icon-show_chart" aria-hidden="true"></span> Productos
+                                </NavLink>
+                            </li>
 
-                    <li class="list-unstyled">
-                        <NavLink class="nav-link" href="Reportes/Reorden">
-                            <span class="icon-show_chart" aria-hidden="true"></span> Reorden
-                        </NavLink>
-                    </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Reportes/Reorden">
+                                    <span class="icon-show_chart" aria-hidden="true"></span> Reorden
+                                </NavLink>
+                            </li>
 
-                    <li class="list-unstyled">
-                        <NavLink class="nav-link" href="">
-                            <span class="icon-show_chart" aria-hidden="true"></span> Clientes
-                        </NavLink>
-                    </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Reportes/Clientes">
+                                    <span class="icon-show_chart" aria-hidden="true"></span> Clientes
+                                </NavLink>
+                            </li>
 
-                    <li class="list-unstyled">
-                        <NavLink class="nav-link" href="Reportes/Usuarios">
-                            <span class="icon-show_chart" aria-hidden="true"></span> Usuarios
-                        </NavLink>
-                    </li>
-                </ul>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Reportes/Usuarios">
+                                    <span class="icon-show_chart" aria-hidden="true"></span> Usuarios
+                                </NavLink>
+                            </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Reportes/Facturas">
+                                    <span class="icon-show_chart" aria-hidden="true"></span> Facturas
+                                </NavLink>
+                            </li>
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Reportes/Categorias">
+                                    <span class="icon-show_chart" aria-hidden="true"></span> Categorias
+                                </NavLink>
+                            </li>
+                        </ul>
                      }
                 </li>
             </ul>
