--- a/ProyectoFinalAp2/Pages/Index.razor
+++ b/ProyectoFinalAp2/Pages/Index.razor
@@ -13,14 +13,14 @@
             </div>
         </a>
 
-        <a href="Productos">
+        <a href="Registros/Productos">
             <div class="card-body" style="background-color: #2980B9">
                 <span class="icon-shop  text-center text-white"></span>
                 <p class="text-center text-white">Registro de productos</p>
             </div>
         </a>    
 
-        <a href="EntradaProductos">
+        <a href="Registros/EntradaProductos">
             <div class="card-body" style="background-color: #F4D03F">
                 <span class="icon-shopping_basket text-center text-white"></span>
                 <p class="text-center text-white">Entrada de productos</p>
