--- a/ProyectoFinalAp2/Shared/NavMenu.razor
+++ b/ProyectoFinalAp2/Shared/NavMenu.razor
@@ -27,13 +27,13 @@
                             </li>
 
                             <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Productos">
+                                <NavLink class="nav-link" href="Registros/Productos">
                                     <span class="icon-shop_two" aria-hidden="true"></span> Productos
                                 </NavLink>
                             </li>
 
                             <li class="list-unstyled">
-                                <NavLink class="nav-link" href="EntradaProductos">
+                                <NavLink class="nav-link" href="Registros/EntradaProductos">
                                     <span class="icon-shopping_basket" aria-hidden="true"></span> Entrada
                                 </NavLink>
                             </li>
@@ -51,7 +51,7 @@
                             </li>
 
                             <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Usuarios">
+                                <NavLink class="nav-link" href="Registros/Usuarios">
                                     <span class="icon-people_outline" aria-hidden="true"></span> Usuario
                                 </NavLink>
                             </li>
@@ -85,6 +85,12 @@
                             </li>
 
                             <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Consultas/EntradaProductos">
+                                    <span class="icon-data_usage" aria-hidden="true"></span> Entrada
+                                </NavLink>
+                            </li>
+
+                            <li class="list-unstyled">
                                 <NavLink class="nav-link" href="ConsultaClientes">
                                     <span class="icon-data_usage" aria-hidden="true"></span> Clientes
                                 </NavLink>
@@ -107,7 +113,7 @@
                     {
                         <ul class="children">
                             <li class="list-unstyled">
-                                <NavLink class="nav-link" href="">
+                                <NavLink class="nav-link" href="Reportes/Categorias">
                                     <span class="icon-show_chart" aria-hidden="true"></span> Categorias
                                 </NavLink>
                             </li>
@@ -115,6 +121,12 @@
                             <li class="list-unstyled">
                                 <NavLink class="nav-link" href="Reportes/Productos">
                                     <span class="icon-show_chart" aria-hidden="true"></span> Productos
+                                </NavLink>
+                            </li>
+
+                            <li class="list-unstyled">
+                                <NavLink class="nav-link" href="Reportes/EntradaProductos">
+                                    <span class="icon-show_chart" aria-hidden="true"></span> Entrada
                                 </NavLink>
                             </li>
 
@@ -140,11 +152,7 @@
                                     <span class="icon-show_chart" aria-hidden="true"></span> Facturas
                                 </NavLink>
                             </li>
-                            <li class="list-unstyled">
-                                <NavLink class="nav-link" href="Reportes/Categorias">
-                                    <span class="icon-show_chart" aria-hidden="true"></span> Categorias
-                                </NavLink>
-                            </li>
+                            
                         </ul>
                      }
                 </li>
