--- a/ProyectoFinalAp2/Pages/Consultas/C_Productos.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_Productos.razor
@@ -1,11 +1,13 @@
 ﻿@page "/Consultas/Productos"
-
-@inject IToastService toast
-
 @using ProyectoFinalAp2.Models;
 @using ProyectoFinalAp2.Controllers;
+@using ProyectoFinalAp2.Data;
+@using System.IO;
+@inject IToastService toast
+@inject ExportService exportService
+@inject Microsoft.JSInterop.IJSRuntime JS
 
-<EditForm Model="lista" OnValidSubmit="Imprimir">
+<EditForm Model="lista" OnValidSubmit="ExportToPdf">
     <DataAnnotationsValidator />
     <div class="card">
         <div class="card-header  alert-info">
@@ -46,7 +48,7 @@
                         <option value="Todo">Todo</option>
                         <option value="Id">ID</option>
                         <option value="Id">Categoria</option>
-                        <option value="Descripcion">Descripcion</option>
+                        <option value="Descripcion">Descripción</option>
                     </select>
                 </div>
 
@@ -65,7 +67,7 @@
                 <thead>
                     <tr>
                         <th>ID</th>
-                        <th>Descripcion</th>
+                        <th>Descripción</th>
                         <th>Categoria</th>
                         <th>Cantidad Existente</th>
                         <th>Precio</th>
@@ -82,14 +84,14 @@
                             <td>@item.Cantidad</td>
                             <td>@item.Precio</td>
                             <td>@item.Fecha</td>
-                            <td><a class="btn btn-outline-info" href="Productos/@item.ProductoId">Ver</a></td>
+                            <td><a class="btn btn-outline-info" href="Registros/Productos/@item.ProductoId">Ver</a></td>
                         </tr>
                     }
                 </tbody>
             </table>
         </div>
         <div class="card-footer">
-            <button type="button" class="btn btn-outline-primary form-control" @onclick="Imprimir">Imprimir</button>
+            <button type="button" class="btn btn-outline-primary form-control" @onclick="ExportToPdf">Exportar a PDF</button>
         </div>
     </div>
 </EditForm>
@@ -100,7 +102,6 @@
 
     private string Filtro { get; set; }
     private string Criterio { get; set; }
-    public string mensaje;
     public bool BuscarFecha { get; set; }
     public DateTime DesdeFecha { get; set; }
     public DateTime HastaFecha { get; set; }
@@ -114,18 +115,21 @@
         HastaFecha = DateTime.Now;
     }
 
-    private void Imprimir()
+    protected async Task ExportToPdf()
     {
-
+        using (MemoryStream excelStream = ExportService.CreatePdfProductos(lista, DateTime.Now.ToString()))
+        {
+            await JS.SaveAs("Productos.pdf", excelStream.ToArray());
+        }
     }
 
-    private void Buscar()
+    private async Task Buscar()
     {
         try
         {
             if (Filtro == null)
             {
-                toast.ShowWarning("Debe seleccionar un Filtro", "Aviso");
+                await JS.Confirmar("top-center", "info", "Aviso", "Debe seleccionar un filtro", false, 2000);
             }
             else
             {
@@ -133,7 +137,7 @@
 
                 if (lista.Count == 0)
                 {
-                    toast.ShowWarning("No hay Productos Registrados", "Aviso");
+                    await JS.Confirmar("top-center", "info", "Aviso", "No hay productos registrados", false, 2000);
                 }
                 else
                 {
@@ -148,18 +152,18 @@
                         case "Categoria":
                             lista = ProductosBLL.GetList(e => CategoriasBLL.Buscar(e.CategoriaiD).Descripcion == Criterio);
                             break;
-                        case "Descripcion":
+                        case "Descripción":
                             lista = ProductosBLL.GetList(e => e.Descripcion == Criterio);
                             break;
                     }
                     if (BuscarFecha == true)
                     {
-                        lista = ProductosBLL.GetList(p => p.Fecha >= DesdeFecha.Date && p.Fecha <= HastaFecha.Date);
+                        lista = lista.Where(p => p.Fecha >= DesdeFecha.Date && p.Fecha <= HastaFecha.Date).ToList();
                     }
 
-                    if(lista == null)
+                    if (lista == null)
                     {
-                        toast.ShowInfo("Vacio", "No se han encontrado productos, revise su criterio de busqueda");
+                        await JS.Confirmar("top-center", "error", "Error", "No se han encontrado productos con este criterio", false, 2000);
                     }
                 }
             }
