--- a/ProyectoFinalAp2/Pages/Registros/R_EntradaProductos.razor
+++ b/ProyectoFinalAp2/Pages/Registros/R_EntradaProductos.razor
@@ -1,9 +1,11 @@
-﻿@page "/EntradaProductos"
+﻿@page "/Registros/EntradaProductos"
+@page "/Registros/EntradaProductos/{iD:int}"
 @using ProyectoFinalAp2.Models
 @using ProyectoFinalAp2.Controllers
 @using ProyectoFinalAp2.Data
 
 @inject IToastService toast
+@inject IJSRuntime JS
 
 <EditForm Model="entradaProductos" OnValidSubmit="Guardar">
     <DataAnnotationsValidator />
@@ -21,15 +23,14 @@
                     <button type="button" class="btn btn-primary" @onclick="Buscar"><span class="icon-search"></span>Buscar</button>
                 </div>
 
-                <label for="FECHA" class="ml-3 mr-3">FECHA</label>
+                <label for="FECHA" class="ml-3 mr-3">Fecha</label>
                 <InputDate @bind-Value="entradaProductos.Fecha" class="form-control"></InputDate>
                 <ValidationMessage For="(() => entradaProductos.Fecha)"></ValidationMessage>
             </div>
 
-            <label for="ENTRADA" class="mt-3">ENTRADA</label>
             <div class="form-row">
                 <div class="form-group col">
-                    <label for="PRODUCTOS">PRODUCTOS</label>
+                    <label for="PRODUCTOS">Producto</label>
                     <div class="input-group">
                         <select @bind="@productoiD" class="form-control" @onclick="CargarProductos">
                             <option value="" disabled selected>Seleccione un Producto</option>
@@ -48,34 +49,34 @@
                     </div>
                 </div>
 
-                    <div class="form-inline ml-3">
-                        <button type="button" class="btn btn-secondary" @onclick="Agregar"><span class="icon-add_chart"></span>Agregar</button>
-                    </div>
+                <div class="form-inline ml-3">
+                    <button type="button" class="btn btn-secondary" @onclick="Agregar"><span class="icon-add_chart"></span>Agregar</button>
+                </div>
             </div>
 
             <table class="table">
                 <thead>
                     <tr>
                         <th> ID </th>
-                        <th> CATEGORIA </th>
-                        <th> DESCRIPCION </th>
-                        <th> CANTIDAD </th>
-                        <th> PRECIO </th>
-                        <th> IMPORTE </th>
+                        <th> Categoria </th>
+                        <th> Descripción </th>
+                        <th> Cantidad </th>
+                        <th> Precio </th>
+                        <th> Importe </th>
                     </tr>
                 </thead>
                 <tbody class="table-striped">
                     @foreach (var item in entradaProductos.DetalleEntrada)
                     {
-                    <tr>
-                        <td>@item.ProductoId</td>
-                        <td>@CategoriasBLL.Buscar(ProductosBLL.Buscar(item.ProductoId).CategoriaiD).Descripcion</td>
-                        <td>@ProductosBLL.Buscar(item.ProductoId).Descripcion</td>
-                        <td>@item.Cantidad</td>
-                        <td>@ProductosBLL.Buscar(item.ProductoId).Precio</td>
-                        <td>@(item.Cantidad * ProductosBLL.Buscar(item.ProductoId).Precio)</td>
-                        <td><button type="button" class="btn btn-danger" @onclick="(()=> EliminarProducto(item))">Eliminar</button></td>
-                    </tr>
+                        <tr>
+                            <td>@item.ProductoId</td>
+                            <td>@CategoriasBLL.Buscar(ProductosBLL.Buscar(item.ProductoId).CategoriaiD).Descripcion</td>
+                            <td>@ProductosBLL.Buscar(item.ProductoId).Descripcion</td>
+                            <td>@item.Cantidad</td>
+                            <td>@ProductosBLL.Buscar(item.ProductoId).Precio</td>
+                            <td>@(item.Cantidad * ProductosBLL.Buscar(item.ProductoId).Precio)</td>
+                            <td><button type="button" class="btn btn-outline-danger" @onclick="(()=> EliminarProducto(item))"><span class="icon-remove"> </span> Eliminar</button></td>
+                        </tr>
                     }
                 </tbody>
             </table>
@@ -86,9 +87,9 @@
                 <ValidationMessage For="(() => entradaProductos.CantidadTotal)"></ValidationMessage>
             </div>
 
-            <div class="form-group">
+            <div class="form-group text-center">
                 <button type="button" class="btn btn-secondary" @onclick="Nuevo"><span class="icon-add"></span> Nuevo </button>
-                <button type="submit" class="btn btn-success" @onclick="Guardar"><span class="icon-save"></span> Guardar </button>
+                <button type="submit" class="btn btn-success"><span class="icon-save"></span> Guardar </button>
                 <button type="button" class="btn btn-danger" @onclick="Eliminar"><span class="icon-delete_forever"></span> Eliminar </button>
             </div>
         </div>
@@ -97,6 +98,9 @@
 
 
 @code {
+    [Parameter]
+    public int iD { get; set; }
+
     Productos productos = new Productos();
     EntradaProductos entradaProductos = new EntradaProductos();
     bool paso = false;
@@ -105,10 +109,16 @@
     public static int productoiD { get; set; }
     public int cantidad { get; set; }
 
+    protected override void OnParametersSet()
+    {
+        var id = iD;
+        var result = Buscar(id);
+    }
+
     protected override void OnInitialized()
     {
         Nuevo();
-        Buscar();
+        var result = Buscar();
         CargarCombo();
     }
 
@@ -137,24 +147,31 @@
         entradaProductos = new EntradaProductos();
     }
 
-    private void Guardar()
+    private async Task Guardar()
     {
-        bool guardado = EntradaProductoBLL.Guardar(entradaProductos);
+        if (entradaProductos.DetalleEntrada.Count() == 0)
+        {
+            await JS.Confirmar("top-center", "info", "Información", "Debe agregar al menos un producto", false, 2000);
+            return;
+        }
 
+        bool guardado = EntradaProductoBLL.Guardar(entradaProductos);
 
         if (guardado)
         {
+            await JS.Confirmar("top-center", "success", "Guardado Exitosamente", "Buen trabajo", false, 2000);
             Nuevo();
-            toast.ShowSuccess("Guardado correctamente", "Exito");
         }
         else
         {
-            toast.ShowError("No se pudo guardar", "Error");
+            await JS.Confirmar("top-center", "error", "Error", "No se pudo guardar", false, 2000);
         }
     }
 
     private void Agregar()
     {
+        var result = VerificarCantidad();
+
         if (paso)
         {
             this.entradaProductos.DetalleEntrada.Add(new Entidades.DetalleEntradaProductos
@@ -166,10 +183,6 @@
             });
 
             CalcularTotal();
-        }
-        else
-        {
-            toast.ShowError("La cantidad requerida supera a la cantidad existente del producto", "Error");
         }
     }
 
@@ -183,22 +196,25 @@
         entradaProductos.CantidadTotal = total;
     }
 
-    private void Eliminar()
+    private async Task Eliminar()
     {
-        bool eliminado = EntradaProductoBLL.Eliminar(entradaProductos.EntradaProductoId);
+        if (await JS.ConfirmDelete("Confirmar", "¿Esta seguro que desea eliminar este usuario?", "question"))
+        {
+            bool eliminado = EntradaProductoBLL.Eliminar(entradaProductos.EntradaProductoId);
 
-        if (eliminado)
-        {
-            Nuevo();
-            toast.ShowSuccess("Eliminado correctamente", "Exito");
-        }
-        else
-        {
-            toast.ShowError("No se pudo eliminar", "Error");
+            if (eliminado)
+            {
+                await JS.Confirmar("top-center", "success", "Eliminada", "Eliminada correctamente", false, 2000);
+                Nuevo();
+            }
+            else
+            {
+                await JS.Confirmar("top-center", "error", "Error", "No se pudo eliminar", false, 2000);
+            }
         }
     }
 
-    private void Buscar()
+    private async Task Buscar()
     {
         if (entradaProductos.EntradaProductoId > 0)
         {
@@ -210,7 +226,24 @@
             }
             else
             {
-                toast.ShowError("No Encontrado", "Error");
+                await JS.Confirmar("top-center", "error", "Error", "No encontrada", false, 2000);
+            }
+        }
+    }
+
+    private async Task Buscar(int paramiD)
+    {
+        if (paramiD > 0)
+        {
+            var Encontrado = EntradaProductoBLL.Buscar(paramiD);
+
+            if (Encontrado != null)
+            {
+                this.entradaProductos = Encontrado;
+            }
+            else
+            {
+                await JS.Confirmar("top-center", "error", "Error", "No encontrada", false, 2000);
             }
         }
     }
@@ -220,14 +253,23 @@
         entradaProductos.DetalleEntrada.Remove(detalle);
     }
 
-    private void VerificarCantidad()
+    private async Task VerificarCantidad()
     {
-        if(productoiD > 0)
+        if (productoiD > 0)
         {
             if (cantidad <= ProductosBLL.Buscar(productoiD).Cantidad)
             {
                 paso = true;
             }
+            else
+            {
+                await JS.Confirmar("top-center", "info", "Información", "La cantidad requerida supera a la cantidad existente del producto", false, 2000);
+                paso = false;
+            }
+        }
+        else
+        {
+            await JS.Confirmar("top-center", "info", "Información", "Debe seleccionar un producto", false, 2000);
         }
     }
 }
