--- a/ProyectoFinalAp2/Pages/Registros/R_Usuarios.razor
+++ b/ProyectoFinalAp2/Pages/Registros/R_Usuarios.razor
@@ -1,5 +1,5 @@
-﻿@page "/Usuarios"
-@page "/Usuarios/{UsuarioId:int}"
+﻿@page "/Registros/Usuarios"
+@page "/Registros/Usuarios/{UsuarioId:int}"
 @using ProyectoFinalAp2.Models
 @using ProyectoFinalAp2.Controllers
 @using ProyectoFinalAp2.Data
@@ -56,7 +56,7 @@
             </div>
 
             <div class="form-group">
-                <label for="NIVEL">NIVEL</label>
+                <label for="NIVEL">Nivel</label>
                 <select id="dropdowntipo" class="form-control" @bind="@usuarios.Nivel">
                     <option value="" disabled selected>Seleccione un nivel</option>
                     <option value="Exemplo1">Administrador</option>
@@ -64,9 +64,9 @@
                 </select>
             </div>
 
-            <div class="form-group">
+            <div class="form-group text-center">
                 <button type="button" class="btn btn-secondary" @onclick="Nuevo"><span class="icon-add"></span> Nuevo </button>
-                <button type="submit" class="btn btn-success" @onclick="Guardar"><span class="icon-save"></span> Guardar </button>
+                <button type="submit" class="btn btn-success"><span class="icon-save"></span> Guardar </button>
                 <button type="button" class="btn btn-danger" @onclick="Eliminar"><span class="icon-delete_forever"></span> Eliminar </button>
             </div>
         </div>
@@ -83,13 +83,13 @@
     protected override void OnParametersSet()
     {
         var id = UsuarioId;
-        Buscar(id);
+        var result = Buscar(id);
     }
 
     protected override void OnInitialized()
     {
         Nuevo();
-        Buscar();
+        var result = Buscar();
     }
 
     private void Nuevo()
@@ -97,38 +97,41 @@
         usuarios = new Usuarios();
     }
 
-    private void Guardar()
+    private async Task Guardar()
     {
         usuarios.PassWord = UsuariosBLL.encode(usuarios.PassWord);
         bool guardado = UsuariosBLL.Guardar(usuarios);
 
         if (guardado)
         {
+            await JS.Confirmar("top-center", "success", "Guardado Exitosamente", "Buen trabajo", false, 2000);
             Nuevo();
-            toast.ShowSuccess("Guardado Corectamente", "Exito");
         }
         else
         {
-            toast.ShowError("No se pudo guardar", "Error");
+            await JS.Confirmar("top-center", "error", "Error", "No se pudo guardar el producto", false, 2000);
         }
     }
 
-    private void Eliminar()
+    private async Task Eliminar()
     {
-        bool eliminado = UsuariosBLL.Eliminar(usuarios.UsuarioId);
+        if (await JS.ConfirmDelete("Confirmar", "¿Esta seguro que desea eliminar este usuario?", "question"))
+        {
+            bool eliminado = UsuariosBLL.Eliminar(usuarios.UsuarioId);
 
-        if (eliminado)
-        {
-            Nuevo();
-            toast.ShowSuccess("Eliminado Corectamente", "Exito");
-        }
-        else
-        {
-            toast.ShowError("No se pudo eliminar", "Error");
+            if (eliminado)
+            {
+                await JS.Confirmar("top-center", "success", "Eliminado", "Eliminado correctamente", false, 2000);
+                Nuevo();
+            }
+            else
+            {
+                await JS.Confirmar("top-center", "error", "Error", "No se pudo eliminar", false, 2000);
+            }
         }
     }
 
-    private void Buscar()
+    private async Task Buscar()
     {
         if (usuarios.UsuarioId > 0)
         {
@@ -140,12 +143,12 @@
             }
             else
             {
-                toast.ShowError("No Encontrado");
+                await JS.Confirmar("top-center", "error", "Error", "No se encontró el usuario", false, 2000);
             }
         }
     }
 
-    private void Buscar(int UsuarioiD)
+    private async Task Buscar(int UsuarioiD)
     {
         if (UsuarioiD > 0)
         {
@@ -157,7 +160,7 @@
             }
             else
             {
-                toast.ShowError("No Encontrado");
+                await JS.Confirmar("top-center", "error", "Error", "No se encontró el usuario", false, 2000);
             }
         }
     }
