--- a/ProyectoFinalAp2/Pages/Reportes/R_Productos.razor
+++ b/ProyectoFinalAp2/Pages/Reportes/R_Productos.razor
@@ -1,6 +1,10 @@
 ﻿@page "/Reportes/Productos"
 @using ProyectoFinalAp2.Models;
 @using ProyectoFinalAp2.Controllers;
+@using ProyectoFinalAp2.Data; 
+@using System.IO;
+@inject ExportService exportService
+@inject Microsoft.JSInterop.IJSRuntime JS
 
     <div class="card">
         <div class="card-header alert-info">
@@ -14,39 +18,41 @@
             </div>
 
             <div class="float-right mb-4">
-                <label for="FECHA">Fecha de impresion: @Fecha </label>
+                <label for="FECHA">Fecha de impresión: @Fecha </label>
             </div>
-    </div>
+        </div>
 
-    <div class="card-body">
-        <table class="table table-striped">
-            <thead>
-                <tr>
-                    <th> ID de Producto </th>
-                    <th> Descripcion </th>
-                    <th> Cantidad </th>
-                    <th> Precio </th>
-                </tr>
-            </thead>
-            <tbody class="table-striped">
-                @foreach (var producto in Lista)
-                {
+        <div class="card-body">
+            <table class="table table-striped">
+                <thead>
                     <tr>
-                        <td>@producto.ProductoId</td>
-                        <td>@producto.Descripcion</td>
-                        <td>@producto.Cantidad</td>
-                        <td>@producto.Precio</td>
+                        <th> ID de Producto </th>
+                        <th> Descripción </th>
+                        <th> Cantidad </th>
+                        <th> Precio </th>
                     </tr>
-                }
-            </tbody>
-        </table>
-    </div>
+                </thead>
+                <tbody class="table-striped">
+                    @foreach (var producto in Lista)
+                    {
+                        <tr>
+                            <td>@producto.ProductoId</td>
+                            <td>@producto.Descripcion</td>
+                            <td>@producto.Cantidad</td>
+                            <td>@producto.Precio</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
 
-    <div class="card-footer">
-        <label for="GANANCIA">Cantidad Total</label>
-        <input @bind="@Total" class="form-control" step="00.2" readonly/>
+        <div class="card-footer">
+            <label for="GANANCIA">Cantidad Total</label>
+            <input @bind="@Total" class="form-control" step="00.2" readonly />
+        </div>
+
+        <button class="btn btn-primary" @onclick="@ExportToPdf">Exportar a PDF</button>
     </div>
-</div>
 
 
 @code {
@@ -70,5 +76,13 @@
             Total += producto.Cantidad;
         }
         return Total;
+    }
+
+    protected async Task ExportToPdf()
+    {
+        using (MemoryStream excelStream = ExportService.CreatePdfProductos(Lista, Fecha))
+        {
+            await JS.SaveAs("Productos.pdf", excelStream.ToArray());
+        }
     }
 }
