--- a/ProyectoFinalAp2/Pages/_Host.cshtml
+++ b/ProyectoFinalAp2/Pages/_Host.cshtml
@@ -20,6 +20,8 @@
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+    <script src="~/js/Functions.js"></script>
 </head>
 <body>
     <app>
