--- a/ProyectoFinalAp2/Pages/Consultas/C_Categorias.razor
+++ b/ProyectoFinalAp2/Pages/Consultas/C_Categorias.razor
@@ -4,69 +4,76 @@
 
 @using ProyectoFinalAp2.Models;
 @using ProyectoFinalAp2.Controllers;
+@using System.IO;
+@using ProyectoFinalAp2.Data;
+@inject Microsoft.JSInterop.IJSRuntime JS
+@inject ExportService exportService
 
-    <div class="card">
-        <div class="card-header  alert-info">
-            <div class="text-center">
-                <img src="Resources/favicon.ico" height="90" />
-            </div>
-
-            <div class="text-center">
-                <h3 class="text-center text-black-50">Consulta de Categorias</h3>
-            </div>
+<div class="card">
+    <div class="card-header  alert-info">
+        <div class="text-center">
+            <img src="Resources/favicon.ico" height="90" />
         </div>
 
-        <div class="card-body">
-            <div class="form-row">
-                <div class="col">
-                    <label for="filtro">Filtro: </label>
-                    <select class="form-control" @bind="filtro">
-                        <option value="" disabled selected>Seleccione un filtro</option>
-                        <option value="1">TODO</option>
-                        <option value="2">ID</option>
-                        <option value="3">DESCRIPCION</option>
-                    </select>
-                </div>
-
-                <div class="form-group col">
-                    <label for="criterio"> Criterio: </label>
-                    <input type="text" class="form-control" @bind="criterio" />
-                </div>
-
-                <div class="form-group col mt-1">
-                    <br />
-                    <button type="button" class="btn btn-outline-success" @onclick="Buscar">Buscar</button>
-                </div>
-            </div>
-
-            <table class="table mb-3">
-                <thead>
-                    <tr>
-                        <th>ID</th>
-                        <th>Descripcion</th>
-                    </tr>
-                </thead>
-                <tbody class="table-striped">
-                    @foreach (var item in lista)
-                    {
-                        <tr>
-                            <td>@item.CategoriaId</td>
-                            <td>@item.Descripcion</td>
-                            <td><a class="btn btn-outline-info" href="Categorias/@item.CategoriaId">Ver</a></td>
-                        </tr>
-                    }
-                </tbody>
-            </table>
-        </div>
-
-       
-        <div class="card-footer">  
-            <div class="form-group">
-                <label>CANTIDAD DE CATEGORIAS</label>
-                <input type="number" @bind="cantidadDeCategorias" class="form-control" readonly/>
-            </div>  
+        <div class="text-center">
+            <h3 class="text-center text-black-50">Consulta de Categorias</h3>
         </div>
     </div>
+
+    <div class="card-body">
+        <div class="form-row">
+            <div class="col">
+                <label for="filtro">Filtro: </label>
+                <select class="form-control" @bind="filtro">
+                    <option value="" disabled selected>Seleccione un filtro</option>
+                    <option value="1">TODO</option>
+                    <option value="2">ID</option>
+                    <option value="3">DESCRIPCION</option>
+                </select>
+            </div>
+
+            <div class="form-group col">
+                <label for="criterio"> Criterio: </label>
+                <input type="text" class="form-control" @bind="criterio" />
+            </div>
+
+            <div class="form-group col mt-1">
+                <br />
+                <button type="button" class="btn btn-outline-success" @onclick="Buscar">Buscar</button>
+            </div>
+        </div>
+
+        <table class="table mb-3">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Descripcion</th>
+                </tr>
+            </thead>
+            <tbody class="table-striped">
+                @foreach (var item in lista)
+                {
+                    <tr>
+                        <td>@item.CategoriaId</td>
+                        <td>@item.Descripcion</td>
+                        <td><a class="btn btn-outline-info" href="Categorias/@item.CategoriaId">Ver</a></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+
+        <div class="form-group">
+            <label>CANTIDAD DE CATEGORIAS</label>
+            <input type="number" @bind="cantidadDeCategorias" class="form-control" readonly />
+        </div>
+    </div>
+
+    <div class="card-footer">        
+        <div class="form-group">
+            <button type="button" class="btn btn-outline-primary form-control" @onclick="ExportToPdf">Exportar a PDF</button>
+        </div>
+    </div>
+</div>
 
 @code {
 
@@ -76,13 +83,13 @@
     private int cantidadDeCategorias = 0;
 
 
-    private void Buscar()
+    private async Task Buscar()
     {
         try
         {
             if (filtro == 0)
             {
-                toast.ShowWarning("Debe seleccionar un Filtro", "Aviso");
+                await JS.Confirmar("top-center", "info", "Aviso", "Debe seleccionar un filtro", false, 2000);
             }
             else
             {
@@ -92,13 +99,17 @@
                         this.lista = CategoriasBLL.GetList(c => true);
                         break;
                     case 2: //Id
-                        int ID = GetId();
+                        int ID = await GetId();
                         this.lista = CategoriasBLL.GetList(c => c.CategoriaId == ID);
                         break;
                     case 3: //descripcion
                         this.lista = CategoriasBLL.GetList(c => c.Descripcion == criterio);
                         break;
                 }
+            }
+            if (lista == null)
+            {
+                await JS.Confirmar("top-center", "info", "Aviso", "No se ha encontrado clientes.", false, 2000);
             }
             CalcularCantidad();
         }
@@ -109,7 +120,16 @@
         }
     }
 
-    private int GetId()
+    protected async Task ExportToPdf()
+    {
+        using (MemoryStream excelStream = ExportService.CreatePdfCategorias(lista, DateTime.Now.ToString()))
+        {
+            await JS.SaveAs("Categorias.pdf", excelStream.ToArray());
+        }
+    }
+
+
+    private async Task<int> GetId()
     {
         int resultado = 0;
 
@@ -121,7 +141,7 @@
         catch (Exception)
         {
 
-            toast.ShowError("El Id debe ser numerico..");
+            await JS.Confirmar("top-center", "error", "Error", "El Id debe ser numerico", false, 2000);
         }
 
         return resultado;
